--- a/WeatherForecast/Views/Home/Index.cshtml
+++ b/WeatherForecast/Views/Home/Index.cshtml
@@ -10,6 +10,7 @@
 <p>
     @Model.wind.deg
     @foreach (var item in Model.weather) {
+        //Billde er taget fra opgaven http://openweathermap.org/img/wn/10d@2x.png
         <img src="https://openweathermap.org/img/wn/@item.icon@@2x.png">
     }
 </p>
